--- a/index.html
+++ b/index.html
@@ -3391,7 +3391,7 @@
             </g>
           </svg>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <svg
             class="illus-5"
             xmlns="http://www.w3.org/2000/svg"
@@ -5414,7 +5414,10 @@
             </p>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-2">
+          <div class="line"></div>
+        </div>
+        <div class="col-md-3">
           <svg
             class="illus-6"
             xmlns="http://www.w3.org/2000/svg"
