--- a/index.html
+++ b/index.html
@@ -88,12 +88,8 @@
           <div class="upr-text">
             <h1>Creating an ecosystem of opportunities</h1>
             <p>
-              Recuriting is so broken in that it focuses so much on background
-              information through resumes rather than the candidate's actual
-              abilities to perform on the job. That's why millions of grest
-              candidates are not getiing hired and are working multiple jobs to
-              make ends meet while 72% of recrutiers struggling to find
-              qualified candidates.
+              We are creating a future where it is exciting and fair to pursue
+              your career in the ever-evolving world of technology.
             </p>
           </div>
         </div>
@@ -3272,8 +3268,12 @@
           </svg>
 
           <p class="mid-text">
-            We are creating a future where it is exciting and fair to pursue
-            your career in the ever-evolving world of technology.
+            Recuriting is so broken in that it focuses so much on background
+            information through resumes rather than the candidate's actual
+            abilities to perform on the job. That's why millions of great
+            candidates are not getting hired and are working multiple jobs to
+            make ends meet while 72% of recrutiers struggling to find qualified
+            candidates.
           </p>
         </div>
       </div>
