--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       crossorigin="anonymous"
     />
     <link
+      href="https://fonts.googleapis.com/css?family=Oxygen:400,700|Arimo:400,700"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
@@ -98,7 +102,17 @@
         </svg>
 
         <div class="upr-text">
-          <h1>Creating an ecosystem of opportunities</h1>
+          <h1
+            style="
+              font-size: 42px;
+              line-height: 52px;
+              font-family: Arimo, sans-serif;
+              font-weight: 700;
+              letter-spacing: -0.1px;
+            "
+          >
+            Creating an ecosystem of opportunities
+          </h1>
           <p>
             We are creating a future where it is exciting and fair to pursue
             your career in the ever-evolving world of technology.
